fixed button on mobile

--- a/css/creative.css
+++ b/css/creative.css
@@ -112,7 +112,7 @@ aside {
     width: 40%;
 }
 .btn-xl{
-  padding:15px 15px;
+  padding:15px 10px !important;
   }
 }
 @media (min-width: 768px) {
